--- a/src/ILICheck.Web/ClientApp/src/App.css
+++ b/src/ILICheck.Web/ClientApp/src/App.css
@@ -17,6 +17,16 @@
   margin-right: 200px;
 }
 
+.app-footer {
+  font-size: 12px;
+  color: #636973;
+  margin-left: 60px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
 .protokoll {
   max-height: 50vh;
   overflow-y: auto;
