--- a/src/ILICheck.Web/ClientApp/src/App.css
+++ b/src/ILICheck.Web/ClientApp/src/App.css
@@ -20,11 +20,10 @@
 .app-footer {
   font-size: 12px;
   color: #636973;
-  margin-left: 60px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  width: 100%;
+  padding-left: 60px;
+  height: 40px;
+  margin-top: auto;
 }
 
 .protokoll {
