--- a/src/ILICheck.Web/ClientApp/src/App.css
+++ b/src/ILICheck.Web/ClientApp/src/App.css
@@ -86,6 +86,10 @@ input {
   margin-left: 10px;
 }
 
+.copy-icon {
+  margin-left: 5px;
+}
+
 /************ Check status ************/
 
 .valid {
@@ -94,4 +98,50 @@ input {
 
 .errors {
   color: #ff1744;
+}
+
+/************ Copy to clipboard function ************/
+
+.copy-tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.copy-tooltip .copy-tooltip-text {
+  visibility: hidden;
+  width: 280px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -75px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.copy-tooltip .copy-tooltip-text::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.copy-tooltip:hover .copy-tooltip-text {
+  visibility: visible;
+  opacity: 1;
+}
+
+.btn-copy-to-clipboard {
+  font-size: 1rem;
+  margin-top: -4px;
+  line-height: 1;
 }
