--- a/src/ILICheck.Web/ClientApp/src/index.css
+++ b/src/ILICheck.Web/ClientApp/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@font-face {
+  font-family: 'Dosis';
+  src: local('Dosis'), url(./fonts/Dosis-SemiBold.ttf) format('truetype');
+}
