Configure custom image assets
ILICHECK-56
ILICHECK-58

--- a/src/ILICheck.Web/ClientApp/src/app.css
+++ b/src/ILICheck.Web/ClientApp/src/app.css
@@ -6,6 +6,16 @@
   min-height: 100vh;
 }
 
+.app-logo {
+  max-height: 200px;
+  max-width: 650px;
+}
+
+.vendor-logo {
+  max-height: 70px;
+  max-width: 200px;
+}
+
 header {
   text-align: left;
   line-height: 2;
