--- a/src/ILICheck.Web/ClientApp/src/app.css
+++ b/src/ILICheck.Web/ClientApp/src/app.css
@@ -17,13 +17,11 @@
 }
 
 header {
-  text-align: left;
-  line-height: 2;
   justify-content: space-between;
   display: flex;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 5px;
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-top: 20px;
 }
 
 .carousel {
@@ -31,7 +29,7 @@ header {
 }
 
 main {
-  min-height: 80vh;
+  min-height: 72vh;
   flex: 1 0 auto;
 }
 
@@ -39,6 +37,9 @@ footer {
   flex-shrink: 0;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  height: 44px;
+  overflow: hidden;
 }
 
 .flex-item {
@@ -47,16 +48,17 @@ footer {
 }
 
 .version-info {
-  text-align: right;
-  margin-top: 8px;
-  color: slategrey;
+  display: flex;
+  align-items: center;
+  flex-grow: 100;
+  margin-left: 20px;
+  color: #acc4db;
 }
 
 .flex-icons {
-  flex-grow: 5;
-  align-self: flex-start;
-  margin-right: 20px;
-  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
 }
 
 
@@ -96,6 +98,7 @@ input {
   color: black;
   font-weight: 600;
   border-color: white;
+  padding-left: 110px !important;
 }
 
 .dropzone-text-error {
