--- a/src/ILICheck.Web/ClientApp/src/custom.css
+++ b/src/ILICheck.Web/ClientApp/src/custom.css
@@ -19,11 +19,7 @@ body {
 
 .footer-style {
   font-family: "Dosis", sans-serif;
-  padding: 10px;
   background: #004489;
-  text-align: right;
-  font-size: 20px;
-  min-height: 70px;
   font-stretch: expanded;
 }
 
@@ -55,11 +51,13 @@ body {
 }
 
 .version-tag {
-  font-size: 12px;
+  margin-top: 2px;
+  font-size: 0.75em;
 }
 
-.icon {
-  padding: 5px;
+.footer-icon {
+  height: 26px;
+  margin-right: 0.4em;
 }
 
 .title {
@@ -69,7 +67,6 @@ body {
 }
 
 .subtitle {
-  padding: 5px;
   font-family: "Dosis", sans-serif;
   font-size: 18px;
   color: white;
