Reword error message
Co-authored-by: MiraGeowerkstatt <mira.bleuler@geowerkstatt.ch>

--- a/src/ILICheck.Web/Views/Shared/PageNotFound.cshtml
+++ b/src/ILICheck.Web/Views/Shared/PageNotFound.cshtml
@@ -28,7 +28,7 @@
     <div class="center">
         <!-- Show optional application logo -->
         <img class="logo" src="/app.png" onerror="this.style.visibility='hidden'" />
-        <div class="title">404 - Page Not Found</div>
+        <div class="title">404 - Not Found</div>
         <div>@Model</div>
         <div><a href="/">Hier</a> geht es zurück zur Applikation.</div>
     </div>
