--- a/src/ILICheck.Web/ClientApp/src/app.css
+++ b/src/ILICheck.Web/ClientApp/src/app.css
@@ -26,20 +26,14 @@ header a {
 }
 
 .app-logo {
-  max-height: 60px;
+  max-height: 200px;
   max-width: 650px;
   padding: 0px;
   margin-bottom: 5px;
   flex: 0;
 }
 
-.vendor-logo {
-  max-height: 70px;
-  max-width: 200px;
-}
-
-.vendor-logo:hover
-{
+.vendor-logo:hover {
   -webkit-transform: scale(1.05);
   transform: scale(1.05);
 }
@@ -54,7 +48,7 @@ header {
 
 .app-title {
   font-family: "Dosis", sans-serif;
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 700;
   padding: 30px;
 }
@@ -64,7 +58,6 @@ header {
   font-size: 15px;
   color: #007cc3;
 }
-
 
 .flex-item {
   flex-grow: 1;
@@ -89,7 +82,6 @@ header {
   flex-grow: 1;
 }
 
-
 /************ Protokoll ************/
 
 .protokoll {
@@ -103,35 +95,17 @@ header {
   max-width: 95vw;
 }
 
-@media screen and (max-width: 12000px) {
-  .protokoll {
-    height: 20vh;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .protokoll {
-    height: 10vh;
-  }
-}
-
-
 .card-body {
   text-align: left;
 }
 
 /************ Carousel ************/
 
-.carousel{
+.carousel {
   color: rgb(111, 111, 111);
-  align-self: center;
-  margin-left: 35px; 
-  flex: 1 1 800px;
+  width: 100%;
   font-size: 20px;
-  border-radius: 20px;
-}
-.carousel-control-next-icon {
-  color:#007cc3;
+  margin-bottom: 1rem;
 }
 
 .carousel-inner {
@@ -141,9 +115,8 @@ header {
 
 .carousel-control-next,
 .carousel-control-prev {
-    filter: invert(100%);
+  filter: invert(100%);
 }
-
 
 /************ Dropzone ************/
 
@@ -188,30 +161,73 @@ input {
 .title-wrapper {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
-  align-items: flex-start;
+  flex-direction: column;
+  align-items: center;
 }
 
-@media screen and (max-width: 12000px) {
+/************ Media queries ************/
+
+@media screen and (max-width: 10000px) {
   .title-wrapper {
-    margin-top: 15vh;
-    margin-left: -36px;
+    margin-top: 12vh;
   }
-  .dropzone{
+  .dropzone {
     margin-top: 3vh;
     font-size: 1rem;
+  }
+  .carousel {
+    font-size: 20px;
+  }
+  .vendor-logo {
+    max-height: 70px;
+    max-width: 200px;
+  }
+  .protokoll {
+    height: 20vh;
+  }
+  .app-logo {
+    max-height: 200px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .title-wrapper {
+    margin-top: 12vh;
+  }
+  .dropzone {
+    margin-top: 3vh;
+    font-size: 1rem;
+  }
+  .carousel {
+    font-size: 18px;
+  }
+  .vendor-logo {
+    margin-left: 2rem;
+    max-height: 50px;
+    max-width: 150px;
+  }
+  .app-logo {
+    max-height: 150px;
   }
 }
 
 @media screen and (max-width: 800px) {
   .title-wrapper {
     margin-top: 5vh;
-    margin-left: 0px;
   }
-  .dropzone{
-  margin-top: 1vh;
-  font-size: 0.8rem;
-}
+  .dropzone {
+    margin-top: 1vh;
+    font-size: 0.8rem;
+  }
+  .carousel {
+    font-size: 14px;
+  }
+  .protokoll {
+    height: 10vh;
+  }
+  .app-logo {
+    max-height: 100px;
+  }
 }
 
 /************ Buttons & Icons ************/
@@ -232,6 +248,7 @@ input {
   background-color: #007cc3;
   border-color: #007cc3;
   margin-left: 15px;
+  vertical-align: baseline;
 }
 
 .check-button:disabled {
@@ -239,7 +256,7 @@ input {
   border-color: #007cc396;
 }
 
-.check-button:hover{
+.check-button:hover {
   background-color: #005485;
   border-color: #005485;
 }
@@ -254,7 +271,7 @@ input {
 }
 
 .download-icon :hover {
-  color:#555;
+  color: #555;
 }
 
 /************ Check status ************/
@@ -264,9 +281,8 @@ input {
 }
 
 .errors {
-  color:  #c10026 
+  color: #c10026;
 }
-
 
 /************ Tooltips ************/
 
@@ -278,13 +294,13 @@ input {
 .icon-tooltip .icon-tooltip-text {
   font-size: 0.8rem;
   visibility: hidden;
-  width: 260px; 
+  width: 260px;
   background-color: #555;
   color: #fff;
   text-align: center;
   border-radius: 6px;
   padding: 5px;
-  position: absolute; 
+  position: absolute;
   z-index: 1;
   bottom: 100%;
   margin-left: -145px;
@@ -308,7 +324,6 @@ input {
   opacity: 1;
 }
 
-
 /************ Footer ************/
 footer {
   flex-shrink: 0;
@@ -331,7 +346,7 @@ footer {
   text-decoration-line: none;
 }
 
-.footer-button:hover{
+.footer-button:hover {
   color: #005485;
 }
 
