Add ili2gpkg version info, hide version string in client UI
because now, with the additional text, it definitely takes to much space in the footer section.

--- a/src/ILICheck.Web/ClientApp/src/app.css
+++ b/src/ILICheck.Web/ClientApp/src/app.css
@@ -64,13 +64,7 @@ header {
 }
 
 .version-info {
-  margin-top: 5px;
-  font-size: 0.75em;
-  color: #c9e2fa;
-}
-
-.version-info a {
-  color: #c9e2fa;
+  visibility: hidden;
 }
 
 /************ Protokoll ************/
