--- a/src/ILICheck.Web/ClientApp/src/app.css
+++ b/src/ILICheck.Web/ClientApp/src/app.css
@@ -74,6 +74,7 @@ header {
   color: black;
   margin-top: 30px;
   max-width: 95vw;
+  min-height: 150px;
 }
 
 .card-body {
@@ -169,9 +170,6 @@ input {
     max-height: 70px;
     max-width: 200px;
   }
-  .protokoll {
-    height: 20vh;
-  }
   .app-logo {
     max-height: 200px;
   }
@@ -222,9 +220,6 @@ input {
   }
   .carousel {
     font-size: 14px;
-  }
-  .protokoll {
-    height: 10vh;
   }
   .app-logo {
     max-height: 100px;
@@ -426,7 +421,7 @@ footer {
   display: flex;
   padding-right: 10px;
   padding-left: 10px;
-  text-align:left;
+  text-align: left;
 }
 
 .banner a {
@@ -445,8 +440,8 @@ footer {
 }
 
 .banner .close-icon {
-   margin-left: 20px;
-   margin-right: 15px;
+  margin-left: 20px;
+  margin-right: 15px;
 }
 
 .banner {
