Update footer-button classes

--- a/src/ILICheck.Web/ClientApp/src/app.css
+++ b/src/ILICheck.Web/ClientApp/src/app.css
@@ -341,7 +341,7 @@ footer {
   font-stretch: expanded;
 }
 
-.footer-button {
+.footer-button.btn-link {
   color: white;
   border: none;
   text-decoration-line: none;
