--- a/src/ILICheck.Web/ClientApp/src/index.css
+++ b/src/ILICheck.Web/ClientApp/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  letter-spacing: 0.05em;
+  font-family: "NeoGeo", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,6 +11,29 @@ code {
 }
 
 @font-face {
-  font-family: 'Dosis';
-  src: local('Dosis'), url(./fonts/Dosis-SemiBold.ttf) format('truetype');
+  font-family: 'NeoGeo';
+  src: url('./fonts/NeoGeo-Light.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NeoGeo';
+  src: url('./fonts/NeoGeo-LightItalic.woff2') format('woff2');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'NeoGeo';
+  src: url('./fonts/NeoGeo-SemiBold.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NeoGeo';
+  src: url('./fonts/NeoGeo-SemiBoldItalic.woff2') format('woff2');
+  font-weight: 600;
+  font-style: italic;
 }
