--- a/src/ILICheck.Web/ClientApp/src/index.css
+++ b/src/ILICheck.Web/ClientApp/src/index.css
@@ -1,9 +1,46 @@
 body {
-  margin: 0;
   letter-spacing: 0.05em;
   font-family: "NeoGeo", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600;
+  letter-spacing: 0.05em;
+}
+
+h1 {
+  font-size: 28px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 20px;
+}
+
+h4 {
+  font-size: 18px;
+}
+
+h5 {
+  font-size: 16px;
+}
+
+h6 {
+  font-size: 14px;
+}
+
+p {
+  font-size: 16px;
+}
+
+b {
+  font-weight: 600;
+  letter-spacing: 0.05em;
 }
 
 code {
