--- a/src/ILICheck.Web/ClientApp/src/app.css
+++ b/src/ILICheck.Web/ClientApp/src/app.css
@@ -48,7 +48,7 @@ header {
 }
 
 .app-title {
-  font-size: 40px;
+  font-size: 4rem;
   font-weight: 600;
   padding: 30px;
 }
@@ -57,7 +57,7 @@ header {
   color: rgb(18, 74, 79);
   font-weight: 600;
   letter-spacing: 0.05em;
-  font-size: 16px;
+  font-size: 1.6rem;
   margin-bottom: 4rem;
 }
 
@@ -73,6 +73,11 @@ header {
   margin-top: 30px;
   max-width: 95vw;
   min-height: 150px;
+  font-size: 1.6rem;
+}
+
+.status {
+  font-size: 1.6rem;
 }
 
 .card-body {
@@ -114,6 +119,7 @@ header {
 
 .log-entry > .title {
   word-break: break-word;
+  font-size: 1.6rem;
 }
 
 .log-entry-container {
@@ -126,7 +132,7 @@ header {
 .carousel {
   color: rgb(111, 111, 111);
   width: 100%;
-  font-size: 18px;
+  font-size: 1.8rem;
   margin-bottom: 1rem;
 }
 
@@ -171,11 +177,35 @@ input {
 }
 
 .nutzungsbestimmungen-input {
-  font-size: 14px;
+  font-size: 1.45rem;
+}
+
+.terms-of-use {
+  margin: 8px;
+  margin-left: 35px;
+}
+
+.terms-of-use button {
+  color: rgb(18, 74, 79);
+  text-decoration: none;
+  font-size: 1.45rem;
+  font-weight: 600;
+  letter-spacing: 0.05em;
+  padding: unset;
+  margin: unset;
+  vertical-align: unset;
+}
+
+.terms-of-use button:hover {
+  color: rgb(63, 97, 100);
+}
+
+.terms-of-use input {
+  margin-right: 8px;
 }
 
 .drop-icon {
-  font-size: 35px;
+  font-size: 3.5rem;
 }
 
 .spinner {
@@ -201,10 +231,10 @@ input {
   .dropzone {
     min-height: 12vh !important;
     margin-top: 3vh;
-    font-size: 16px;
+    font-size: 1.6rem;
   }
   .carousel {
-    font-size: 20px;
+    font-size: 2rem;
   }
   .vendor-logo {
     max-height: 70px;
@@ -223,10 +253,10 @@ input {
   .dropzone {
     min-height: 12vh !important;
     margin-top: 3vh;
-    font-size: 16px;
+    font-size: 1.6rem;
   }
   .carousel {
-    font-size: 18px;
+    font-size: 1.8rem;
   }
   .vendor-logo {
     margin-left: 2rem;
@@ -245,10 +275,10 @@ input {
   .dropzone {
     min-height: 10vh !important;
     margin-top: 1vh;
-    font-size: 14px;
+    font-size: 1.4rem;
   }
   .carousel {
-    font-size: 14px;
+    font-size: 1.4rem;
   }
   .app-logo {
     max-height: 100px;
@@ -264,7 +294,7 @@ input {
 
 .btn {
   letter-spacing: 0.05em;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 .check-button {
@@ -294,7 +324,7 @@ input {
 }
 
 .download-icon {
-  font-size: 30px;
+  font-size: 3rem;
   margin-left: 10px;
 }
 
@@ -320,7 +350,7 @@ input {
 }
 
 .icon-tooltip .icon-tooltip-text {
-  font-size: 0.8rem;
+  font-size: 1rem;
   visibility: hidden;
   width: 260px;
   background-color: rgb(85, 85, 85);
@@ -367,7 +397,7 @@ footer {
 
 .footer-button.btn-link {
   color: rgb(18, 74, 79);
-  font-size: 16px;
+  font-size: 1.6rem;
   border: none;
   text-decoration-line: none;
 }
@@ -380,7 +410,6 @@ footer {
 
 .modal {
   color: black;
-  font-size: 14px;
   text-align: left;
 }
 
@@ -394,7 +423,11 @@ footer {
 
 .modal-content h3 {
   padding-top: 0.25em;
-  font-size: 16px;
+  font-size: 1.6rem;
+}
+
+.modal-content p, li, span {
+  font-size: 1.45rem;
 }
 
 .modal .btn {
@@ -405,30 +438,6 @@ footer {
 .modal .btn:hover {
   background-color: rgb(18, 74, 79);
   color: white;
-}
-
-.terms-of-use {
-  margin: 8px;
-  margin-left: 35px;
-}
-
-.terms-of-use button {
-  color: rgb(18, 74, 79);
-  text-decoration: none;
-  font-size: 14px;
-  font-weight: 600;
-  letter-spacing: 0.05em;
-  padding: unset;
-  margin: unset;
-  vertical-align: unset;
-}
-
-.terms-of-use button:hover {
-  color: rgb(63, 97, 100);
-}
-
-.terms-of-use input {
-  margin-right: 8px;
 }
 
 .about-licenses p {
@@ -466,16 +475,19 @@ footer {
   flex-shrink: 0;
   padding-left: 15px;
   padding-right: 25px;
+  margin-top: 10px;
 }
 
 .banner p {
-  font-size: 18px;
+  font-size: 1.8rem;
+  margin-top: 10px;
 }
 
 .banner .close-icon {
   margin-left: 20px;
   margin-right: 15px;
   cursor: pointer;
+  font-size: 2.5rem;
 }
 
 @keyframes fadeInOpacity {
